--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "firebase": "^3.6.4",
+    "vee-validate": "^2.0.0-beta.18",
     "vue": "^2.1.0",
     "vue-router": "^2.1.1",
     "vuefire": "^1.3.0",
