--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vee-validate": "^2.0.0-beta.18",
     "vue": "^2.1.0",
     "vue-router": "^2.1.1",
+    "vue-spinner": "^1.0.2",
     "vuefire": "^1.3.0",
     "vuex": "^2.1.1"
   },
